[package]
name = "codecrafters-http-server"
version = "0.1.0"
authors = ["Codecrafters <hello@codecrafters.io>"]
edition = "2021"
rust-version = "1.80"

[lib]
name = "http_server_lib"
path = "src_1/lib.rs"

[dependencies]
anyhow = "1.0.68"                                # error handling
bytes = "1.3.0"                                  # helps manage buffers
thiserror = "1.0.38"                             # error handling
bumpalo = "3.19.0"